[build-system]
requires = ["setuptools", "setuptools-scm", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-dummy-backend"
dynamic = ["version"]
dependencies = [
    "fastapi[standard]",
    "ec2_metadata",
]

[tool.setuptools.packages]
find = { }

[tool.setuptools-git-versioning]
enabled = true
dirty_template = "{tag}.post{ccount}+dirty"